--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    -->sh: 1: react-scripts: not found
   </body>
 </html>
